[package]
name = "cockroach_fuse"
version = "0.1.0"
authors = ["Nathan VanBenschoten <nvanbenschoten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
fuse = "0.3"
libc = "0.2"
time = "0.1"

[dependencies.postgres]
version = "0.15"
features = ["with-time"]
